--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,11 @@ jobs:
           curl -sSL https://install.python-poetry.org | python3 -
           echo "$HOME/.local/bin" >> $GITHUB_PATH  # Ensure Poetry is in PATH
 
+
+      - name: Debug 
+        run: |
+          git diff HEAD pyproject.toml
+
       - name: Clear Poetry cache
         run: poetry cache clear pypi --all
 
