--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,16 +44,14 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install ffmpeg -y
-          rm -f poetry.lock # Need to be sure we have the last poetry.lock file
-          poetry lock
-          poetry install --no-interaction --no-root  # Installs dependencies from `poetry.lock`
+          poetry install --no-interaction --no-root  --with-dev # Installs dependencies from `poetry.lock`
 
       - name: Set Env variables
         run: "echo TEST_SCOPE=CICD-OPENSOURCE >> $GITHUB_ENV"
 
       - name: Run Test suite
         run: |
-          pytest -vvv -s -m 'unit or integration' -n auto --maxprocesses=8 --dist loadgroup
+          poetry run pytest -vvv -s -m 'unit or integration' -n auto --maxprocesses=8 --dist loadgroup
 
   generate_doc:
     needs: test
