--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,11 +96,6 @@ python-magic = "^0.4.27"
 sphinx = "^8.2.3"
 furo = "^2024.8.6"
 psycopg2 = "^2.9.10"
-pytest-mock = "^3.14.0"
-pytest-cov = "^6.0.0"
-pytest = "^7.4.4"
-pytest-xdist = "^3.6.1"
-pytest-timeout = "^2.3.1"
 affinda = "^4.25.0"
 amazon-textract-response-parser = "^1.0.3"
 boto3 = "^1.35.84"
@@ -133,6 +128,12 @@ jsonschema = "^4.22"
 litellm = "^1.58.0"
 requests = "^2.32"
 
+[tool.poetry.group.dev.dependencies]
+pytest-mock = "^3.14.0"
+pytest-cov = "^6.0.0"
+pytest = "^7.4.4"
+pytest-xdist = "^3.6.1"
+pytest-timeout = "^2.3.1"
 
 [build-system]
 requires = ["poetry-core"]
