Remove the lock ffs

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,6 +44,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install ffmpeg -y
+          rm -f poetry.lock
           poetry install --no-interaction --no-root  --with dev # Installs dependencies from `poetry.lock`
 
       - name: Set Env variables
