--- a/pyproject.toml
+++ b/pyproject.toml
@@ -126,6 +126,7 @@ asgiref = "^3.8.1"
 jsonschema = "^4.22"
 litellm = "^1.58.0"
 requests = "^2.32"
+pybase64 = "^1.4.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest-mock = "^3.14.0"
