--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,7 +88,7 @@ jobs:
       - run:
           name: check working providers
           command: |
-            python edenai_apis/scripts/check_not_working_providers.py << parameters.interval >>
+            poetry run python edenai_apis/scripts/check_not_working_providers.py << parameters.interval >>
 
 
 # Invoke jobs via workflows
