--- a/pyproject.toml
+++ b/pyproject.toml
@@ -132,6 +132,7 @@ curl-cffi = "^0.14.0"
 aiofiles = "^24.1.0"
 multidict = ">=6.4.0"
 websockets = "^16.0"
+websocket-client = "^1.9.0"
 
 
 [tool.poetry.group.dev.dependencies]
