--- a/pyproject.toml
+++ b/pyproject.toml
@@ -124,12 +124,15 @@ docstring-parser = "^0.16"
 pymupdf = "^1.25.4"
 asgiref = "^3.8.1"
 jsonschema = "^4.22"
-litellm = "^1.75.5"
+litellm = "^1.80.0"
 requests = "^2.32"
 aioboto3 = "^15.1.0"
 httpx = "^0.28.1"
 curl-cffi = "^0.14.0"
 aiofiles = "^24.1.0"
+multidict = ">=6.4.0"
+websockets = "^16.0"
+websocket-client = "^1.9.0"
 
 
 [tool.poetry.group.dev.dependencies]
